add_subdirectory(B1Base)
add_subdirectory(B1Crypto)
add_subdirectory(B1DBClient)
add_subdirectory(B1Http)
add_subdirectory(B1Network)
add_subdirectory(B1Path)
add_subdirectory(B1PLC)
add_subdirectory(B1Redic)
add_subdirectory(B1Util)
list(APPEND ${BnD_COMPONENTS} "B1Base")
list(APPEND ${BnD_COMPONENTS} "B1Crypto")
list(APPEND ${BnD_COMPONENTS} "B1DBClient")
list(APPEND ${BnD_COMPONENTS} "B1Http")
list(APPEND ${BnD_COMPONENTS} "B1Network")
list(APPEND ${BnD_COMPONENTS} "B1Path")
list(APPEND ${BnD_COMPONENTS} "B1PLC")
list(APPEND ${BnD_COMPONENTS} "B1Redic")
list(APPEND ${BnD_COMPONENTS} "B1Util")
